--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "chalk": "^2.4.2",
     "cross-spawn": "^6.0.5",
     "glob": "^7.1.3"
+  },
+  "resolutions": {
+    "**/**/lodash": "^4.17.13"
   }
 }
