--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "resolutions": {
     "**/**/lodash": "^4.17.13",
-    "**/**/acorn": "^5.7.4"
+    "**/**/acorn": "^5.7.4",
+    "**/**/kind-of": "^6.0.3"
   }
 }
